syntax = "proto3";
package Graphics;

message Cartesian
{
  double x = 1;
  double y = 2;
  double z = 3;
}

// Note: Higher priority than quaternions.
message Euler
{
  double x = 1;
  double y = 2;
  double z = 3;
}

// Note: Lower priority than Euler angles.
message Quaternion
{
  double u0 = 1;
  double u1 = 2;
  double u2 = 3;
  double u3 = 4;
}

message CartesianPose
{
  Cartesian  position   = 1; // Units [mm].
  Euler      euler      = 2; // Units [degrees].
  Quaternion quaternion = 3; // Units [-].
}